# kickstart-initrd

./: .gitignore  .gitmodules  .travis.yml  README.rst  configure.ac
pki/: gen_test_keystore.sh
src/: Makefile.am  bpak_helpers.c  bpak_helpers.h  config.c  config.h  crc.h  crypto.h  crypto_common.h  dm.c  dm.h  gpt.c  gpt.h  ini.c  ini.h  keys.c  keys.h  kickstart.h  ks_mbedtls.c  log.c  log.h  main.c  utils.c  utils.h  verity.c  verity.h
src/kcapi/: kcapi.h
test/: Makefile.am  test_hello.c
